feat: add multiblock pattern buffer automation