@@ -1,8 +1,16 @@
 package com.raishxn.ufo.item;
 
 import appeng.api.stacks.GenericStack;
+import appeng.api.config.FuzzyMode;
+import appeng.api.ids.AEComponents;
+import appeng.api.storage.cells.ICellWorkbenchItem;
+import appeng.api.upgrades.IUpgradeInventory;
+import appeng.api.upgrades.UpgradeInventories;
+import appeng.core.AEConfig;
 import appeng.items.AEBaseItem;
+import appeng.items.contents.CellConfig;
 import appeng.items.storage.StorageCellTooltipComponent;
+import appeng.util.ConfigInventory;
 import com.raishxn.ufo.datagen.ModDataComponents;
 import net.minecraft.ChatFormatting;
 import net.minecraft.network.chat.Component;
@@ -13,13 +21,35 @@ import net.minecraft.world.item.Rarity;
 import net.minecraft.world.item.TooltipFlag;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-public class InfinityGenesisCell extends AEBaseItem {
+public class InfinityGenesisCell extends AEBaseItem implements ICellWorkbenchItem {
 
     public InfinityGenesisCell() {
         super(new Item.Properties().stacksTo(1).rarity(Rarity.EPIC).fireResistant());
+    }
+
+    @Override
+    public ConfigInventory getConfigInventory(ItemStack stack) {
+        return CellConfig.create(stack);
+    }
+
+    @Override
+    public IUpgradeInventory getUpgrades(ItemStack stack) {
+        return UpgradeInventories.forItem(stack, 2);
+    }
+
+    @Override
+    public FuzzyMode getFuzzyMode(ItemStack stack) {
+        return stack.getOrDefault(AEComponents.STORAGE_CELL_FUZZY_MODE, FuzzyMode.IGNORE_ALL);
+    }
+
+    @Override
+    public void setFuzzyMode(ItemStack stack, FuzzyMode fuzzyMode) {
+        stack.set(AEComponents.STORAGE_CELL_FUZZY_MODE, fuzzyMode);
     }
 
     @Override
@@ -52,6 +82,12 @@ public class InfinityGenesisCell extends AEBaseItem {
                 .limit(5)
                 .map(entry -> new GenericStack(entry.what(), InfinityCell.getAsIntMax(entry.what())))
                 .toList();
-        return Optional.of(new StorageCellTooltipComponent(List.of(), content, keys.size() > 5, true));
+        List<ItemStack> upgrades = Collections.emptyList();
+        if (AEConfig.instance().isTooltipShowCellUpgrades()) {
+            List<ItemStack> installedUpgrades = new ArrayList<>();
+            getUpgrades(stack).forEach(installedUpgrades::add);
+            upgrades = installedUpgrades;
+        }
+        return Optional.of(new StorageCellTooltipComponent(upgrades, content, keys.size() > 5, true));
     }
 }
